# ROS_PX4_MOCAP

./: README.md  arm.cpp  cmake_adds.txt  data.txt  dev_guide.md  extract_data.sh  install_ros.sh  ros_info_mavros.txt  rosservices.txt  rostopics.txt  snap.csv  trajectory.csv
analysis/: compare_logs.py  logger_plot.py  my_viz_lib.py  new_logger.py  plot_some_data.py  position.csv  px4_logger.py  snap.csv  snap.py  state.csv  target_position.csv
analysis/logs/: log_2_2022-6-9-12-59-52_actuator_armed_0.csv  log_2_2022-6-9-12-59-52_actuator_controls_0_0.csv  log_2_2022-6-9-12-59-52_actuator_controls_3_0.csv  log_2_2022-6-9-12-59-52_actuator_outputs_0.csv  log_2_2022-6-9-12-59-52_actuator_outputs_1.csv  log_2_2022-6-9-12-59-52_battery_status_0.csv  log_2_2022-6-9-12-59-52_commander_state_0.csv  log_2_2022-6-9-12-59-52_cpuload_0.csv  log_2_2022-6-9-12-59-52_esc_status_0.csv  log_2_2022-6-9-12-59-52_estimator_attitude_0.csv  log_2_2022-6-9-12-59-52_estimator_attitude_1.csv  log_2_2022-6-9-12-59-52_estimator_event_flags_0.csv  log_2_2022-6-9-12-59-52_estimator_event_flags_1.csv  log_2_2022-6-9-12-59-52_estimator_innovation_test_ratios_0.csv  log_2_2022-6-9-12-59-52_estimator_innovation_test_ratios_1.csv  log_2_2022-6-9-12-59-52_estimator_innovation_variances_0.csv  log_2_2022-6-9-12-59-52_estimator_innovation_variances_1.csv  (+479 more)
arm2/: CMakeLists.txt  package.xml  position.csv
arm2/include/: api.hpp  (+2 more)
listener/: CMakeLists.txt  package.xml
px4/: CMakeLists.txt  package.xml
px4/include/: file_write.hpp
trajectories/: 8_figure_snap.csv  snap.csv  trajectory.csv
(+34 files in other folders)
